--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "15.0.2",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
