--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "mongoose": "^8.8.0",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
