--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-hook-form": "^7.53.2",
     "react-rating": "^2.0.5",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
